@@ -811,13 +811,8 @@ static NSDistributedNotificationCenter	*netCenter = nil;
   notification = [NSNotification notificationWithName: name
 					       object: object
 					     userInfo: userInfo];
-#ifdef __GNU_LIBOBJC__
-  [recipient performSelector: sel_registerTypedName([aSelector cString], 0)
+  [recipient performSelector: GSSelectorFromNameAndTypes([aSelector cString], 0)
 		  withObject: notification];
-#else
-  [recipient performSelector: sel_registerTypedName_np([aSelector cString], 0)
-		  withObject: notification];
-#endif
 }
 
 @end
